<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Campo de exibição -->

    <!-- Grid de botões -->

    <TextView
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="60dp"
        android:background="#808080"
        android:gravity="end"
        android:padding="26dp"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:columnCount="4"
        android:rowCount="5"
        android:layout_marginHorizontal="40dp">

        <!-- Linha 1 -->
        <Button
            android:text="@string/btn_clear"
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF9800"  />

        <!-- Espaço 1 -->
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1" />

        <!-- Espaço 2 -->
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1" />

        <!-- ÷ botão -->
        <Button
            android:text="@string/btn_divide"
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFF00" />


        <!-- Linha 2 -->
        <Button
            android:text="@string/btn_sete"
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"/>


        <Button
            android:text="@string/btn_oito"
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"/>


        <Button
            android:text="@string/btn_nove"
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"/>


        <Button
            android:text="@string/btn_multip"
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFF00" />

        <!-- Linha 3 -->
        <Button
            android:text="@string/btn_quatro"
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"/>


        <Button
            android:text="@string/btn_cinco"
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"/>
        <Button
            android:text="@string/btn_seis"
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000" />

        <Button
            android:text="@string/btn_menos"
            android:id="@+id/btnSubtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFF00" />

        <!-- Linha 4 -->
        <Button
            android:text="@string/btn_um"
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"/>


        <Button
            android:text="@string/btn_dois"
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000" />


        <Button
            android:text="@string/btn_tres"
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"/>


        <Button
            android:text="@string/btn_mais"
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFF00" />

        <!-- Linha 5 -->
        <Button
            android:text="@string/btn_zero"
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:layout_columnSpan="2" />


        <Button
            android:text="@string/btn_virgula"
            android:id="@+id/btnDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF9800"  />


        <Button
            android:text="@string/btn_igual"
            android:id="@+id/btnEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFF00" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
